# reflection_presentation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.sh  build.sh  clean.sh  install_compiler.sh  prepare_compiler.sh  test.sh  toolchain.cmake
.github/workflows/: main.yml
cmake/: magic_get.cmake  magic_get.cmake.in  nlohmann_json.cmake  nlohmann_json.cmake.in  protobuf.cmake  protobuf.cmake.in
scripts/: bootstrap_impl.sh  build_impl.sh  flags.sh  flags_gtest.sh  flags_json.sh  flags_magic_get.sh  flags_protobuf.sh  flags_rangev3.sh  flags_root.sh  install_snap.sh
src/: CMakeLists.txt
src/01_aggregate/: for_each.h  main.cc
src/01_aggregate_magic_get/: CMakeLists.txt  magic_io.h
src/01_aggregate_reflection/: CMakeLists.txt  for_each.h  magic_io.h
src/01_aggregate_reflection_bonus/: CMakeLists.txt  for_each.h  magic_io.h  main.cc
src/02_json/: CMakeLists.txt  main.cc
src/02_json_reflection/: CMakeLists.txt  for_each.h  main.cc
src/02_json_reflection_bonus/: CMakeLists.txt  for_each.h  magic_io.h
src/03_protobuf/: CMakeLists.txt  main.cc
src/03_protobuf/protos/: CMakeLists.txt  user.proto
src/03_protobuf_metaclass/: CMakeLists.txt  main.cc  proto.h
src/04_gmock/: CMakeLists.txt  browser.h  test.cc
src/04_without_gmock/: CMakeLists.txt  browser.h  mockable.h
src/05_without_gmock/: test.cc
src/06_without_gmock/: CMakeLists.txt  mockable_impl.h  mockable_impl_insert_mock_details.h  test.cc
